apps/infinity-kanban/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infinity-kanban
  namespace: default
  labels:
    app: infinity-kanban
spec:
  type: ClusterIP
  selector:
    app: infinity-kanban
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
